--- a/src/components/LicensePlate/LicensePlateInput/LicensePlateInput.module.scss
+++ b/src/components/LicensePlate/LicensePlateInput/LicensePlateInput.module.scss
@@ -17,13 +17,23 @@
   height: 3.5rem;
   text-align: center;
   font-size: 1.5rem;
-  background-color: blue;
+  background-color: white;
   border-top-right-radius: 0.3rem;
   border-bottom-right-radius: 0.3rem;
 }
 
+.InputContainer {
+  display: flex;
+}
+
 .Container {
   display: flex;
-  margin-left: 1rem;
-  margin-top: 1rem;
+  flex-direction: column;
+  align-items: center;
+}
+
+.Header {
+  font-size: 3rem;
+  color: white;
+  margin-bottom: 2rem;
 }
