[feat] Info Aesthetic changes

--- a/src/components/LicensePlate/LicensePlateInfo/LicensePlateInfoFields/LicensePlateInfoFields.module.scss
+++ b/src/components/LicensePlate/LicensePlateInfo/LicensePlateInfoFields/LicensePlateInfoFields.module.scss
@@ -1,7 +1,13 @@
+.Container {
+  margin: 1rem 0rem;
+}
+
 .FieldName {
   font-size: 2rem;
 }
 
 .FieldInfo {
   font-size: 3.5rem;
+  font-weight: 400;
+  padding: 0;
 }
