--- a/src/components/LicensePlate/LicensePlateInfo/LicensePlateInfo.module.scss
+++ b/src/components/LicensePlate/LicensePlateInfo/LicensePlateInfo.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   background-color: white;
-  width: 50rem;
+  width: 35%;
   border-radius: 1rem;
   margin: auto;
   margin-top: 10rem;
