--- a/src/components/LicensePlate/CarShowcase/CarShowcase.module.scss
+++ b/src/components/LicensePlate/CarShowcase/CarShowcase.module.scss
@@ -1,3 +1,5 @@
+@use '../../../sass/variables.scss';
+
 .ImagesContainer {
   display: grid;
   align-items: center;
@@ -5,6 +7,10 @@
   gap: 5rem;
   max-width: 100%;
   overflow: hidden;
+  @media only screen and (max-width: variables.$small-screen-width) {
+    grid-template-columns: 0 1fr 0;
+    justify-items: center;
+  }
 }
 
 .Container {
@@ -26,4 +32,7 @@
   font-size: 10rem;
   fill: black;
   cursor: pointer;
+  @media only screen and (max-width: variables.$tiny-screen-width) {
+    font-size: 5rem;
+  }
 }
