--- a/src/components/LicensePlate/LicensePlateInfo/LicensePlateInfo.module.scss
+++ b/src/components/LicensePlate/LicensePlateInfo/LicensePlateInfo.module.scss
@@ -1,3 +1,5 @@
+@use "../../../sass/variables.scss";
+
 .Container {
   display: flex;
   flex-direction: column;
@@ -7,4 +9,12 @@
   margin: auto;
   margin-top: 10rem;
   padding: 2.5rem 3rem;
+  @media only screen and (max-width: variables.$small-screen-width) {
+    width: 50%;
+  }
+
+  @media only screen and (max-width: variables.$tiny-screen-width) {
+    width: 70%;
+    margin-top: 7rem;
+  }
 }
