--- a/src/components/LicensePlate/LicensePlateInfo/LicensePlateInfoFields/LicensePlateInfoFields.module.scss
+++ b/src/components/LicensePlate/LicensePlateInfo/LicensePlateInfoFields/LicensePlateInfoFields.module.scss
@@ -1,13 +1,21 @@
+@use "../../../../sass/variables.scss";
+
 .Container {
   margin: 1rem 0rem;
 }
 
 .FieldName {
   font-size: 2rem;
+  @media only screen and (max-width: variables.$tiny-screen-width) {
+    font-size: 1.7rem;
+  }
 }
 
 .FieldInfo {
   font-size: 3.5rem;
   font-weight: 400;
   padding: 0;
+  @media only screen and (max-width: variables.$tiny-screen-width) {
+    font-size: 2.9rem;
+  }
 }
