--- a/src/sass/resets/_reset-and-normalize.scss
+++ b/src/sass/resets/_reset-and-normalize.scss
@@ -1,3 +1,5 @@
+@use '../variables.scss';
+
 *,
 *::after,
 *::before {
@@ -9,7 +11,7 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%; //1rem = 10px
-  @media only screen and (max-width: 1100px) {
+  @media only screen and (max-width: variables.$medium-screen-width) {
     font-size: 50%; //1rem = 8px
   }
 }
